--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="title">Serviço de Cache HTTP</div>
             <div class="subtitle">Configure o serviço</div>
             <div class="input-container ic1">
-                <input name="cache_port" class="input" type="text" placeholder=" " />
+                <input name="cache_server_port" class="input" type="text" placeholder=" " />
                 <div class="cut"></div>
-                <id="cache_port" class="placeholder">Porta do Cache</id>
+                <id="cache_port" class="placeholder">Porta do Servidor de Cache</id>
             </div>
             <div class="input-container ic2">
                 <input name="redis_host" class="input" type="text" placeholder=" " />
