--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <id="expiration_time" class="placeholder">Tempo de Expiração (sec.)</id>
             </div>
             <div>
-                <button id="btnStart" class="submit">Inicia Serviço</button>
+                <button id="btnStart" class="submit">Iniciar Serviço</button>
             </div>
     </form>
 
